--- a/src/app/modulos/landing/landing-page/landing-page.component.html
+++ b/src/app/modulos/landing/landing-page/landing-page.component.html
@@ -1,1 +1,4 @@
-<button (click)="goToLogin()"> Acceder al login</button>
+<button (click)="goToLogin()"> Ingresar</button>
+<br><br>
+<button (click)="goToRegister()"> Registrarse</button>
+
