--- a/src/app/modulos/landing/landing-page/landing-page.component.html
+++ b/src/app/modulos/landing/landing-page/landing-page.component.html
@@ -13,7 +13,7 @@
         <img class="d-block w-100" src="https://www.eltiempo.com/uploads/2017/04/12/58ee844aa1ca3.jpeg" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://img7.tokyvideo.com/videos/703/70323/previews/previews_0012_custom_1621043004.2164.jpg" alt="Third slide">
+        <img class="d-block w-100" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTcJFaCvWZPMQis3VirJOKWmoID5_SoNmoYcQ&usqp=CAU" alt="Third slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
