--- a/src/app/modulos/landing/landing-page/landing-page.component.css
+++ b/src/app/modulos/landing/landing-page/landing-page.component.css
@@ -1,1 +1,26 @@
-@import "~bootstrap/dist/css/bootstrap.css";
+.landing-container{
+    margin: 50px 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background:  linear-gradient(white , black) ;
+    padding: 10px 10px;
+}
+
+.button-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 30px auto;
+    width: 20rem;
+}
+
+.btn{
+    margin: 0px 20px;
+    width: 100px;   
+}
+
+.btn:hover{
+    scale: 1.2;
+    transition: all 1s;
+}
