--- a/src/app/modulos/landing/landing-page/landing-page.component.html
+++ b/src/app/modulos/landing/landing-page/landing-page.component.html
@@ -1,30 +1,53 @@
-<button (click)="goToLogin()"> Ingresar</button>
-<br><br>
-<button (click)="goToRegister()"> Registrarse</button>
-
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="https://img6.tokyvideo.com/videos/686/68612/previews/previews_0012_custom_1620540083.1469.jpg" alt="First slide">
+<div class="landing-container">
+  <div id="carouselExampleIndicators" class="carousel slide">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner" style="width: 150vh; height: 80vh; margin:auto" data-bs-ride="carousel" >
+      <div class="carousel-item active" data-bs-interval="2000">
+        <img style="width: 100%; height: auto;"
+          src="https://img6.tokyvideo.com/videos/686/68612/previews/previews_0012_custom_1620540083.1469.jpg"
+          class="d-block w-100" alt="...">
       </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="https://www.eltiempo.com/uploads/2017/04/12/58ee844aa1ca3.jpeg" alt="Second slide">
+      <div class="carousel-item" data-bs-interval="2000">
+        <img src="https://www.eltiempo.com/uploads/2017/04/12/58ee844aa1ca3.jpeg" class="d-block w-100" alt="...">
       </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTcJFaCvWZPMQis3VirJOKWmoID5_SoNmoYcQ&usqp=CAU" alt="Third slide">
+      <div class="carousel-item" data-bs-interval="2000">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTcJFaCvWZPMQis3VirJOKWmoID5_SoNmoYcQ&usqp=CAU"
+          class="d-block w-100" alt="...">
       </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+      data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+      data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
+
+  <div class="m-2 bg-light">
+    <h2> Hey what's up? </h2>
+    <img class="card-img-top p-2" src="https://i.pinimg.com/originals/b6/68/9f/b6689f28ceddb64258d438f355cdb8db.gif"
+      alt="Card image cap">
+    <div class="card-body">
+      <div class="button-container">
+        <h4> Do I know you?</h4>
+        <button href="#" class="btn btn-primary landing-btn" (click)="goToLogin()"> Log in </button>
+      </div>
+
+      <div class="button-container">
+        <h4> Are you new?</h4>
+        <button href="#" class="btn btn-primary landing-btn" (click)="goToRegister()"> Sign up </button>
+      </div>
+    </div>
+  </div>
+</div>
