--- a/src/app/shared/error404/error404.component.html
+++ b/src/app/shared/error404/error404.component.html
@@ -1,17 +1,21 @@
 <app-nav-bar></app-nav-bar>
-<div class="d-flex align-items-center justify-content-center vh-80">
+<div class="d-flex align-items-center justify-content-center vh-80 m-5">
     <div class="text-center row">
         <div class=" col-md-6">
-            <img src="https://cdn.pixabay.com/photo/2017/03/09/12/31/error-2129569__340.jpg" alt=""
+            <img src="https://media.giphy.com/media/lZc51u0xLpPlm/giphy.gif" alt=""
                 class="img-fluid">
         </div>
-        <div class=" col-md-6 mt-5">
-            <p class="fs-3"> <span class="text-danger">Opps!</span> Page not found.</p>
+        
+        <div class="row col-md-6">
+            <div class=" ">
+                <img class="img-fluid error404img" src="https://static.vecteezy.com/system/resources/previews/015/131/133/original/crossing-sign-error-404-png.png" alt="">
+                <p class=""> <span class="text-danger">Opps!</span> Page not found.</p>
+            </div>
+            
             <p class="lead">
                 The page you’re looking for doesn’t exist.
             </p>
             <a href="index.html" class="btn btn-primary">Go Home</a>
         </div>
-
     </div>
 </div>
