mejoras visuales, creo modelo meliculas, reemplazo promise por observers, modelo endpoint de jsonserver como lo solicitan los profesores

--- a/src/app/modulos/landing/landing-page/landing-page.component.html
+++ b/src/app/modulos/landing/landing-page/landing-page.component.html
@@ -8,18 +8,18 @@
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
         aria-label="Slide 3"></button>
     </div>
-    <div class="carousel-inner" style="width: 150vh; height: 80vh; margin:auto" data-bs-ride="carousel" >
+    <div class="carousel-inner" data-bs-ride="carousel" >
       <div class="carousel-item active" data-bs-interval="2000">
         <img style="width: 100%; height: auto;"
-          src="https://img6.tokyvideo.com/videos/686/68612/previews/previews_0012_custom_1620540083.1469.jpg"
-          class="d-block w-100" alt="...">
+          src="https://i.ytimg.com/vi/i-0pwUZhvPw/maxresdefault.jpg"
+          class="d-block w-100 carousel-img" alt="...">
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="https://www.eltiempo.com/uploads/2017/04/12/58ee844aa1ca3.jpeg" class="d-block w-100" alt="...">
+        <img src="https://i.ytimg.com/vi/QbTKQcKhTAY/maxresdefault.jpg" class="d-block w-100 carousel-img" alt="...">
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTcJFaCvWZPMQis3VirJOKWmoID5_SoNmoYcQ&usqp=CAU"
-          class="d-block w-100" alt="...">
+        <img src="https://lacapsulablog.files.wordpress.com/2017/06/transformers-1-www-culturageek-com_-ar_.jpg"
+          class="d-block w-100 carousel-img" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
