--- a/src/app/modulos/landing/landing-page/landing-page.component.css
+++ b/src/app/modulos/landing/landing-page/landing-page.component.css
@@ -1,11 +1,31 @@
 .landing-container{
-    margin: 50px 10px;
+    margin: 0px 10px;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background:  linear-gradient(white , black) ;
-    padding: 10px 10px;
+    background:  linear-gradient(gray , black) ;
+   
+    height: 100vh;
 }
+
+.slide{
+    width: 150vh; 
+    height: 100vh; 
+}
+
+.carousel-inner{
+    width: 150vh; 
+    height: 100vh; 
+    margin:auto;
+}
+
+.carousel-img{
+    position: relative;
+    margin: 50px 10px;
+    
+}
+
+
 
 .button-container{
     display: flex;
