--- a/src/app/modulos/main/main-page/main-page.component.html
+++ b/src/app/modulos/main/main-page/main-page.component.html
@@ -1,2 +1,2 @@
-<app-nav-bar></app-nav-bar>
-<app-movie-list></app-movie-list>
+<app-nav-bar ></app-nav-bar>
+<app-movie-list [movieList]="movieList"></app-movie-list>
