--- a/src/app/shared/error404/error404.component.html
+++ b/src/app/shared/error404/error404.component.html
@@ -15,7 +15,8 @@
             <p class="lead">
                 The page you’re looking for doesn’t exist.
             </p>
-            <a href="index.html" class="btn btn-primary">Go Home</a>
+            <!-- preguntar porque el href es el que manda y no el routerlink -->
+            <a href="/list" routerLink="['/landing']" routerLinkActive="active" class="btn btn-primary">Go Home</a>
         </div>
     </div>
 </div>
