--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -16,8 +16,8 @@
         <a class="nav-link text-light" (click)="logout()">cerrar sesion</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <form class="form-inline my-2 my-lg-0" (ngSubmit)="onSubmit()" [formGroup]="searchForm">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" formControlName="searchQuery">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
 </nav>
