comentarios y arreglos varios

--- a/src/app/modulos/main/main-page/main-page.component.html
+++ b/src/app/modulos/main/main-page/main-page.component.html
@@ -1,2 +1,2 @@
 <app-nav-bar (queryString)="filterList($event)"></app-nav-bar>
-<app-movie-list [movieList]="filteredMovieList" (addDelete)="addFavourite($event)"></app-movie-list>
+<app-movie-list [movieList]="filteredMovieList" (addDelete)="addFavourite($event)" [buttonText]="buttonText"[buttonText]="buttonText"></app-movie-list>
