--- a/src/app/modulos/favourites/favourites-page/favourites-page.component.html
+++ b/src/app/modulos/favourites/favourites-page/favourites-page.component.html
@@ -1,3 +1,3 @@
 <app-nav-bar></app-nav-bar>
-<app-movie-list [movieList]="movieListFavourite" ></app-movie-list>
+<app-movie-list [movieList]="movieListFavourite" [buttonText]="buttonText" (addDelete)="deleteFavorite($event)"></app-movie-list>
 
