--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -1,21 +1,21 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand text-light">Gihbli</a>
+  <a class="navbar-brand text-light" style="margin-left:5px ;">Ghibli</a>
   <button class="navbar-toggler text-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon text-light"></span>
   </button>
 
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link text-light" (click)="goToHome()">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-light" (click)="goToFavourite()">favoritos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-light" (click)="logout()">cerrar sesion</a>
-      </li>
-    </ul>
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item" [ngClass]="{ 'disabled': currentRoute === '/main' }">
+      <a class="nav-link text-light" (click)="goToHome()">Home <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item" [ngClass]="{ 'disabled': currentRoute === '/favourite' }">
+      <a class="nav-link text-light" (click)="goToFavourite()">Favoritos</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-light" (click)="logout()">Cerrar sesión</a>
+    </li>
+  </ul>
     <form class="form-inline my-2 my-lg-0" (ngSubmit)="onSubmit()" [formGroup]="searchForm">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" formControlName="searchQuery">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
