aplico validators, arreglos de css y traduccion del navbar

--- a/src/app/modulos/comments/comment-page/comment-page.component.html
+++ b/src/app/modulos/comments/comment-page/comment-page.component.html
@@ -34,8 +34,8 @@
                 <form [formGroup]="commentForm" (ngSubmit)="addComment()">
                     <div class="newComment">
                         <input formControlName="content" type="text"
-                            style="width: 90%; margin-left: 15px; margin-right: 15px;"
-                            placeholder="  Remember to be respectful in chat">
+                            style="width: 90%; margin-left: 15px; margin-right: 15px; padding: 0px 15px;"
+                            placeholder="Remember to be respectful in chat">
                         <button type="submit" style="margin-right: 5px;" class="btn btn-Dark">Send</button>
                     </div>
                 </form>
