--- a/src/app/modulos/auth/login/login.component.html
+++ b/src/app/modulos/auth/login/login.component.html
@@ -1,22 +1,47 @@
 <div class="d-flex align-items-center justify-content-center vh-80 m-5">
     <div class="text-center row">
-        <form (ngSubmit)="userLogin()">
+        <form (ngSubmit)="userLogin()" [formGroup]="form">
             <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">What is your e-mail?</label>
-                <input class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" type="email"
-                    name="email" [(ngModel)]="user.email" placeholder="Enter your e-mail here">
+                <label for="email" class="form-label">What is your e-mail?</label>
+                <input class="form-control" aria-describedby="emailHelp" type="email" name="email" 
+                    formControlName="email" placeholder="Enter your e-mail here">
                 <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
-            <div class="mb-3 ">
-                <label for="exampleInputPassword1" class="form-label">Now write your password 👇</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" type="password" name="password"
-                    [(ngModel)]="user.password" placeholder="Enter your password here">
+            <div *ngIf="(form.controls['email'].getError('required') && form.controls['email'].touched) && (form.controls['email'].invalid || form.invalid)" class="alert alert-danger" role="alert">
+                Please enter your email
             </div>
+            <div *ngIf="(form.controls['email'].getError('minlength') || form.controls['email'].invalid) && form.controls['email'].touched " class="alert alert-danger" role="alert">
+                Enter an email that must contain at least 5 characters.
+            </div>
+
+            <div class="mb-3 ">
+                <label for="password" class="form-label">Now write your password 👇</label>
+                <input class="form-control" aria-describedby="emailHelp" type="password" name="password"
+                    formControlName="password" placeholder="Enter your password here">
+                <div id="emailHelp" class="form-text">We'll never share your password with anyone else.</div>
+            </div>
+            <div *ngIf="(form.controls['password'].getError('required') && form.controls['password'].touched) &&(form.controls['password'].invalid || form.invalid) " class="alert alert-danger" role="alert">
+                Please enter your password
+            </div>
+            <div *ngIf="(form.controls['password'].getError('minlength') || form.controls['password'].invalid) && form.controls['password'].touched " class="alert alert-danger" role="alert">
+                Enter an password that must contain at least 8 characters.
+            </div>
+            <div *ngIf="(form.touched || form.dirty) && form.invalid" class="alert alert-danger" role="alert">
+                Please complete this form
+            </div>
+
             <button type="submit" class="btn btn-primary">Log in</button>
-        </form>        
+        </form>
     </div>
     <div class=" col-md-6 m-5">
         <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExanZ3N2pmdHkyczJ2MXFidTNsaTMzeTd1cHMwdGpuanQ5cHh0NzFycyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/kd9BlRovbPOykLBMqX/giphy.gif"
             alt="" class="img-fluid">
     </div>
+</div>
+<div class="d-flex align-items-center justify-content-center vh-80 m-5">
+    <h2>Wrong way? Don't worry</h2>
+    <div class="m-5">
+        <button class="btn btn-primary" (click)="goRegister()"> Sign up </button>
+        <button class="btn btn-secondary" (click)="goHome()"> Go home </button>
+    </div>    
 </div>
