--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -1,3 +1,4 @@
+<div *ngIf="showDiv==0">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand text-light" style="margin-left:5px ;">Ghibli</a>
   <button class="navbar-toggler text-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -6,10 +7,7 @@
   </button>
 
   <ul class="navbar-nav mr-auto">
-    <li class="nav-item" [ngClass]="{ 'disabled': currentRoute === '/main' }">
-      <a class="nav-link text-light" (click)="goToHome()">Home <span class="sr-only">(current)</span></a>
-    </li>
-    <li class="nav-item" [ngClass]="{ 'disabled': currentRoute === '/favourite' }">
+    <li class="nav-item">
       <a class="nav-link text-light" (click)="goToFavourite()">Favorites</a>
     </li>
     <li class="nav-item">
@@ -21,3 +19,43 @@
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
 </nav>
+</div>
+<div *ngIf="showDiv==1">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand text-light" style="margin-left:5px ;">Ghibli</a>
+    <button class="navbar-toggler text-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon text-light"></span>
+    </button>
+  
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link text-light" (click)="goToHome()">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-light" (click)="logout()">Log Out</a>
+      </li>
+    </ul>
+  </nav>
+</div>
+<div *ngIf="showDiv==2">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand text-light" style="margin-left:5px ;">Ghibli</a>
+    <button class="navbar-toggler text-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon text-light"></span>
+    </button>
+  
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link text-light" (click)="goToHome()">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-light" (click)="goToFavourite()">Favorites</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-light" (click)="logout()">Log Out</a>
+      </li>
+    </ul>
+  </nav>
+</div>
