--- a/src/app/shared/error404/error404.component.html
+++ b/src/app/shared/error404/error404.component.html
@@ -1,5 +1,4 @@
-<app-nav-bar></app-nav-bar>
-<div class="d-flex align-items-center justify-content-center vh-80 m-5">
+<div class="d-flex align-items-center justify-content-center vh-80 m-5" >
     <div class="text-center row">
         <div class=" col-md-6">
             <img src="https://media.giphy.com/media/lZc51u0xLpPlm/giphy.gif" alt=""
@@ -16,7 +15,7 @@
                 The page you’re looking for doesn’t exist.
             </p>
             <!-- preguntar porque el href es el que manda y no el routerlink -->
-            <a href="/list" routerLink="['/landing']" routerLinkActive="active" class="btn btn-primary">Go Home</a>
+            <a href="/landing" routerLink="['/landing']" routerLinkActive="active" class="btn btn-primary">Go Home</a>
         </div>
     </div>
 </div>
