--- a/src/app/modulos/landing/landing-page/landing-page.component.html
+++ b/src/app/modulos/landing/landing-page/landing-page.component.html
@@ -8,18 +8,18 @@
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
         aria-label="Slide 3"></button>
     </div>
-    <div class="carousel-inner" data-bs-ride="carousel" >
+    <div class="carousel-inner" data-bs-ride="carousel" style="">
       <div class="carousel-item active" data-bs-interval="2000">
-        <img style="width: 100%; height: auto;"
-          src="https://i.ytimg.com/vi/i-0pwUZhvPw/maxresdefault.jpg"
-          class="d-block w-100 carousel-img" alt="...">
+        <img style="width: 100%; height: 100vh;" src={{arrayMovieImages[0]}} class="d-block w-100 carousel-img"
+          alt="...">
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="https://i.ytimg.com/vi/QbTKQcKhTAY/maxresdefault.jpg" class="d-block w-100 carousel-img" alt="...">
+        <img style="width: 100%; height: 100vh;" src={{arrayMovieImages[1]}} class="d-block w-100 carousel-img"
+          alt="...">
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="https://lacapsulablog.files.wordpress.com/2017/06/transformers-1-www-culturageek-com_-ar_.jpg"
-          class="d-block w-100 carousel-img" alt="...">
+        <img style="width: 100%; height: 100vh;" src={{arrayMovieImages[2]}} class="d-block w-100 carousel-img"
+          alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -33,18 +33,17 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-  <div class="m-2 bg-light">
-    <h2> Hey what's up? </h2>
-    <img class="card-img-top p-2" src="https://i.pinimg.com/originals/b6/68/9f/b6689f28ceddb64258d438f355cdb8db.gif"
-      alt="Card image cap">
+  <div class="m-2 bg-secondary">
+    <img src="assets\logo-ghibli.png" class="card-img-top p-2">
+  
     <div class="card-body">
       <div class="button-container">
         <h4> Do I know you?</h4>
-        <button href="#" class="btn btn-primary landing-btn" (click)="goToLogin()"> Log in </button>
+        <button href="#" class="btn btn-dark landing-btn" (click)="goToLogin()"> Log in </button>
       </div>
       <div class="button-container">
-        <h4> Are you new?</h4>
-        <button href="#" class="btn btn-primary landing-btn" (click)="goToRegister()"> Sign up </button>
+        <h4> Are you new? </h4>
+        <button href="#" class="btn btn-dark landing-btn" (click)="goToRegister()"> Sign up </button>
       </div>
     </div>
   </div>
