--- a/src/app/modulos/landing/landing-page/landing-page.component.html
+++ b/src/app/modulos/landing/landing-page/landing-page.component.html
@@ -8,7 +8,7 @@
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
         aria-label="Slide 3"></button>
     </div>
-    <div class="carousel-inner" data-bs-ride="carousel" style="">
+    <div class="carousel-inner" data-bs-ride="carousel">
       <div class="carousel-item active" data-bs-interval="2000">
         <img style="width: 100%; height: 100vh;" src={{arrayMovieImages[0]}} class="d-block w-100 carousel-img"
           alt="...">
