--- a/src/app/modulos/comments/comment-page/comment-page.component.html
+++ b/src/app/modulos/comments/comment-page/comment-page.component.html
@@ -1,5 +1,5 @@
 <app-nav-bar></app-nav-bar>
-<div class="container">
+<div class="container" style="min-height: 92.3vh; padding-bottom: 2vh;">
     <div class="imageContainer">
         <img class="image" [src]="movie.image" alt="Movie Image">
     </div>
